<resources>
    <string name="app_name">异景炫彩</string>

    <string name="text_company_name">北京异景科技有限公司</string>
    <string name="control_name">控制</string>
    <string name="mall_name">商城</string>
    <string name="video_name">视频</string>
    <string name="mine_name">我的</string>

    <!-- WXPayEntryActivity -->
    <string name="pay_result_tip">这个界面用于显示第三方app通过微信支付的结果</string>
    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>
    <string name="app_tip">提示</string>

    <string name="notifyTitle">提示</string>
    <string name="gpsNotifyMsg">当前手机扫描蓝牙需要打开定位功能。</string>
    <string name="setting">前往设置</string>
    <string name="cancel">取消</string>

    <string name="start_scan">开始扫描</string>
    <string name="stop_scan">停止扫描</string>
    <string name="expand_search_settings">展开搜索设置</string>
    <string name="retrieve_search_settings">收起搜索设置</string>
    <string name="connect_fail">连接失败</string>
    <string name="active_disconnected">设备断开成功</string>
    <string name="other_disconnected">超出连接范围或设备已关闭</string>
    <string name="please_open_blue">请先打开蓝牙</string>

    <string name="temperature">温度</string>
    <string name="motor_1_speed">进料电机速度</string>
    <string name="dc_supply_voltage">直流供电电压</string>
    <string name="motor_2_speed">刮料电机速度</string>
    <string name="motor_3_speed">吹风电机速度</string>
    <string name="motor_4_speed">备用电机速度</string>
    <string name="dmx_address">DMX地址</string>
    <string name="pitch">倾角</string>
    <string name="ultrasonic_ranging">超声波测距</string>
    <string name="infrared_distance_measurement">红外测距</string>
    <string name="device_id">设备ID</string>

    <string name="message_permission_rationale">程序只有满足下列权限才能正常操作:\n\n%1$s</string>
    <string name="message_permission_always_failed">程序需要下列权限, 请在设置中打开:\n\n%1$s</string>
    <string name="tip">提示</string>
    <string name="resume">唤醒</string>
    <string name="set">设置</string>
    <string name="no">否</string>

    <string name="title_activity_register">注册</string>
    <string name="title_activity_reset_password">重置密码</string>

    <string name="prompt_password">密码</string>
    <string name="prompt_verify_code">验证码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">登录</string>
    <string name="action_register">注册</string>
    <string name="forgot_password">忘记密码？</string>
    <string name="register">注册</string>
    <string name="jet">喷射</string>
    <string name="jet_stop">停止喷射</string>
    <string name="rest_time">剩余时间</string>
    <string name="gualiao_time">刮料时间</string>
    <string name="register_success">注册成功</string>
    <string name="operation_success">操作成功</string>
    <string name="action_reset_password">重置密码</string>
    <string name="login_success">登录成功</string>
    <string name="send_verify_code_success">成功发送验证码</string>
    <string name="get_verify_code_later">%1$d秒后才能重新获取</string>
    <string name="get_verify_code_failed">获取验证码失败，因为\n%1$s</string>
    <string name="reset_password_success">重置成功</string>
    <string name="error_cannot_empty">不能为空</string>
    <string name="duration">时长</string>
    <string name="delay">延时</string>
    <string name="height">喷射高度</string>
    <string name="height_max">最高高度</string>
    <string name="height_min">最低高度</string>

    <string name="create_group">新建组</string>
    <string name="my_order">我的订单</string>
    <string name="content_opinion">内容描述</string>
    <string name="btn_submit">提交</string>
    <string name="opinion_content_hint">请简要描述您的问题和意见(限500字内)</string>
    <string name="opinion_content">内容描述</string>
    <string name="upper_limit">输入字数已达上限</string>
    <string name="num_500">/500</string>
    <string name="ej_color_flower">异景彩花机</string>
    <string name="exit_login">退出登录</string>
    <string name="btn_demo_description">演示说明</string>
    <string name="btn_confirm">确定</string>
    <string name="current_psd">当前密码</string>
    <string name="reset_psd">重置密码</string>
    <string name="confirm_psd">确认密码</string>
    <string name="confirm_psd_hint">请确认新密码</string>
    <string name="current_psd_hint">请输入原密码</string>
    <string name="reset_psd_hint">请输入新密码</string>
    <string name="add_device">添加设备</string>
    <string name="add_jet_effect">添加喷射效果</string>
    <string name="rmb">￥</string>
    <string name="yuan">元</string>
    <string name="sold">已售:</string>
    <string name="stock_have">有货</string>
    <string name="stock_no">无货</string>
    <string name="one">1</string>
    <string name="zero">0</string>
    <string name="add_group">新建组</string>
    <string name="phone_num">请输入手机号码</string>
    <string name="login_pwd">请输入密码</string>
    <string name="btn_login">登录</string>
    <string name="btn_register">注册</string>
    <string name="btn_forget_pwd">忘记密码</string>
    <string name="btn_pay">立即支付</string>
    <string name="set_pwd">设置密码</string>
    <string name="verify_code">验证码</string>
    <string name="get_verify_code">获取验证码</string>
    <string name="please_add_device">请添加设备到分组</string>
    <string name="spray_time">喷射时间</string>
    <string name="slide_left_to_delete">左滑删除</string>
    <string name="btn_edit">编辑</string>
    <string name="btn_save">保存</string>
    <string name="btn_del">删除</string>
    <string name="connected_true">已连接</string>
    <string name="connected_false">不可连接</string>
    <string name="text_temp">温度</string>
    <string name="text_dmx">DMX地址</string>
    <string name="text_time">剩余时间</string>
    <string name="add_material">加料</string>
    <string name="remove_device">移除设备</string>
    <string name="customer_service">客服</string>
    <string name="buy_now">立即购买</string>
    <string name="basic_postage">基础邮费：</string>
    <string name="postage">邮费:</string>
    <string name="postage_before">（满</string>
    <string name="postage_after">元免邮）</string>

    <string name="toast_login_fail">登录失效，请重新登录</string>
    <string name="toast_already_used">该料包已被使用，请添加其它料包</string>
    <string name="toast_add_material_failed">设备添料失败</string>
    <string name="toast_cancel_bind_success">取消绑定成功</string>
    <string name="toast_cancel_bind_failed">取消绑定失败</string>
    <string name="toast_get_info_failed">获取信息失败</string>
    <string name="toast_no_right_operation">您无权对该设备进行操作</string>
    <string name="toast_no_right_operation_pkg">您无权限对该料包进行操作</string>
    <string name="toast_add_material_success">恭喜您，料包添加成功</string>

    <string name="config_stream">流水灯</string>
    <string name="config_ride">跑马灯</string>
    <string name="config_interval">间隔高低</string>
    <string name="config_together">齐喷</string>
    <string name="config_stop">延迟喷射</string>
    <string name="text_left_to_right">从左到右</string>
    <string name="text_right_to_left">从右到左</string>
    <string name="text_border_to_center">从两端到中间</string>
    <string name="text_center_to_border">从中间到两端</string>
    <string name="text_s">S</string>
    <string name="text_total_money">合计金额：</string>
    <string name="text_total">合计:</string>
    <string name="text_shipping_address">收货地址：</string>
    <string name="text_consignee">收货人：</string>
    <string name="text_manage">管理</string>
    <string name="text_enter_master_mode">多台控制</string>
    <string name="text_enter_single_mode">单台控制</string>
    <string name="text_master_mode">主控模式</string>
    <string name="text_set_master">设置主控</string>
    <string name="text_order_num">订单编号：</string>
    <string name="text_order_time">下单时间：</string>
    <string name="text_multiply">×</string>
    <string name="text_common">共</string>
    <string name="text_items">件商品</string>
    <string name="type_wait_payment">待付款</string>
    <string name="type_wait_ship">待发货</string>
    <string name="type_wait_receipt">待收货</string>
    <string name="type_complete_goods">已完成</string>
    <string name="text_config">配置</string>
    <string name="text_address_def">[默认地址]</string>
    <string name="text_add_addr">请添加收货地址</string>
    <string name="text_device_null">您暂无添加设备</string>
    <string name="text_add_device_null">添加设备</string>
    <string name="please_input">请输入</string>
    <string name="text_direction">方向</string>
    <string name="text_gap">间隔时间</string>
    <string name="text_duration">持续时间</string>
    <string name="text_gap_big">大间隔时间</string>
    <string name="text_jet_time">喷射时间</string>
    <string name="text_delay_time">延时时间</string>
    <string name="text_loop">喷射次数</string>
    <string name="text_frequency">换向次数</string>
    <string name="text_dev_num">设备数量</string>
    <string name="text_start_dmx">起始 DMX</string>
    <string name="def_addr">默认地址</string>
    <string name="clear_material">清料</string>
    <string name="txt_start_time">开始时间</string>
    <string name="txt_end_time">结束时间</string>
    <string name="txt_year">年</string>
    <string name="txt_month">月</string>
    <string name="txt_day">日</string>
</resources>
