<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:stv="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.MiModifyPwdActivity">

    <include layout="@layout/layout_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorWhite"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/tv_current_psd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="4dp"
            android:text="@string/current_psd"
            android:textColor="@color/colorBlack"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_current_psd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:background="@null"
            android:hint="@string/current_psd_hint"
            android:inputType="textPassword"
            android:padding="4dp"
            android:textColor="@color/colorGray"
            android:textSize="14sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:background="@color/colorGray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorWhite"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/tv_reset_psd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="4dp"
            android:text="@string/reset_psd"
            android:textColor="@color/colorBlack"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_reset_psd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:background="@null"
            android:hint="@string/reset_psd_hint"
            android:inputType="textPassword"
            android:padding="4dp"
            android:textColor="@color/colorGray"
            android:textSize="14sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:background="@color/colorGray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorWhite"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/tv_confirm_psd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="4dp"
            android:text="@string/confirm_psd"
            android:textColor="@color/colorBlack"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_confirm_psd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:background="@null"
            android:hint="@string/confirm_psd_hint"
            android:inputType="textPassword"
            android:padding="4dp"
            android:textColor="@color/colorGray"
            android:textSize="14sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:background="@color/colorGray" />

    <com.allen.library.SuperButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="36dp"
        android:layout_marginTop="64dp"
        android:text="@string/btn_confirm"
        android:textColor="@color/white"
        stv:sCornersRadius="50dp"
        stv:sSelectorDisableColor="@color/colorGray"
        stv:sSelectorNormalColor="@color/colorPrimary"
        stv:sUseSelector="true" />
</LinearLayout>