<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    tools:context=".view.activity.CoConfigIntervalActivity">

    <include layout="@layout/layout_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="58dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="84dp"
            android:layout_height="wrap_content"
            android:text="@string/text_gap"
            android:textColor="@color/colorTitle"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_interval_gap"
            android:layout_width="170dp"
            android:layout_height="30dp"
            android:background="@drawable/shape_edit_bg"
            android:hint="@string/please_input"
            android:inputType="numberDecimal"
            android:padding="6dp"
            android:textColor="@color/colorTitleName"
            android:textCursorDrawable="@null"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/text_s"
            android:textColor="@color/colorNoClick" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="18dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="84dp"
            android:layout_height="wrap_content"
            android:text="@string/text_duration"
            android:textColor="@color/colorTitle"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_interval_duration"
            android:layout_width="170dp"
            android:layout_height="30dp"
            android:background="@drawable/shape_edit_bg"
            android:hint="@string/please_input"
            android:inputType="numberDecimal"
            android:padding="6dp"
            android:textColor="@color/colorTitleName"
            android:textCursorDrawable="@null"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/text_s"
            android:textColor="@color/colorNoClick" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="18dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="84dp"
            android:layout_height="wrap_content"
            android:text="@string/text_frequency"
            android:textColor="@color/colorTitle"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_interval_frequency"
            android:layout_width="170dp"
            android:layout_height="30dp"
            android:background="@drawable/shape_edit_bg"
            android:hint="@string/please_input"
            android:inputType="number"
            android:padding="6dp"
            android:textColor="@color/colorTitleName"
            android:textCursorDrawable="@null"
            android:textSize="12sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_verify_interval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="120dp"
        android:background="@drawable/ic_btn_full"
        android:text="@string/btn_confirm"
        android:textColor="@color/colorWhite"
        android:textSize="19sp" />

    <Button
        android:id="@+id/btn_demo_interval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/ic_btn_null"
        android:text="@string/btn_demo_description"
        android:textColor="@color/colorNavBar"
        android:textSize="19sp" />
</LinearLayout>