<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <include layout="@layout/layout_toolbar" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:text="@string/text_direction"
        android:textColor="@color/colorBlack"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/radio_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="15dp">

            <RadioButton
                android:id="@+id/rbtn_left_to_right"
                android:layout_width="104dp"
                android:layout_height="31dp"
                android:background="@drawable/shape_btn_on_click"
                android:button="@null"
                android:gravity="center"
                android:text="@string/text_left_to_right"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <RadioButton
                android:id="@+id/rbtn_border_to_center"
                android:layout_width="104dp"
                android:layout_height="31dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/shape_btn_no_click"
                android:button="@null"
                android:gravity="center"
                android:text="@string/text_border_to_center"
                android:textColor="@color/colorNoClick"
                android:textSize="15sp" />

        </RadioGroup>

        <RadioGroup
            android:id="@+id/radio_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp">

            <RadioButton
                android:id="@+id/rbtn_right_to_left"
                android:layout_width="104dp"
                android:layout_height="31dp"
                android:background="@drawable/shape_btn_no_click"
                android:button="@null"
                android:gravity="center"
                android:text="@string/text_right_to_left"
                android:textColor="@color/colorNoClick"
                android:textSize="15sp" />

            <RadioButton
                android:id="@+id/rbtn_center_to_border"
                android:layout_width="104dp"
                android:layout_height="31dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/shape_btn_no_click"
                android:button="@null"
                android:gravity="center"
                android:text="@string/text_center_to_border"
                android:textColor="@color/colorNoClick"
                android:textSize="15sp" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="45dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="84dp"
            android:layout_height="wrap_content"
            android:text="@string/text_gap"
            android:textColor="@color/colorConfig"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/et_stream_gap"
            android:layout_width="124dp"
            android:layout_height="30dp"
            android:background="@drawable/shape_edit_bg"
            android:hint="@string/please_input"
            android:inputType="number"
            android:padding="6dp"
            android:textColor="@color/colorTitleName"
            android:textCursorDrawable="@null"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/text_s"
            android:textColor="@color/colorNoClick" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="15dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="84dp"
            android:layout_height="wrap_content"
            android:text="@string/text_duration"
            android:textColor="@color/colorConfig"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/et_stream_duration"
            android:layout_width="124dp"
            android:layout_height="30dp"
            android:background="@drawable/shape_edit_bg"
            android:hint="@string/please_input"
            android:inputType="number"
            android:padding="6dp"
            android:textColor="@color/colorTitleName"
            android:textCursorDrawable="@null"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/text_s"
            android:textColor="@color/colorNoClick" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="15dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="84dp"
            android:layout_height="wrap_content"
            android:text="@string/text_gap_big"
            android:textColor="@color/colorConfig"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/et_stream_gap_big"
            android:layout_width="124dp"
            android:layout_height="30dp"
            android:background="@drawable/shape_edit_bg"
            android:hint="@string/please_input"
            android:inputType="number"
            android:padding="6dp"
            android:textColor="@color/colorTitleName"
            android:textCursorDrawable="@null"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/text_s"
            android:textColor="@color/colorNoClick" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="15dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="84dp"
            android:layout_height="wrap_content"
            android:text="@string/text_loop"
            android:textColor="@color/colorConfig"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/et_stream_loop"
            android:layout_width="124dp"
            android:layout_height="30dp"
            android:background="@drawable/shape_edit_bg"
            android:hint="@string/please_input"
            android:inputType="number"
            android:padding="6dp"
            android:textColor="@color/colorTitleName"
            android:textCursorDrawable="@null"
            android:textSize="12sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_config_verify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@drawable/ic_btn_confirm" />
</LinearLayout>