<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    tools:context=".view.activity.CoConfigTogetherActivity">

    <include layout="@layout/layout_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="45dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="84dp"
            android:layout_height="wrap_content"
            android:text="@string/text_duration"
            android:textColor="@color/colorConfig"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/et_together_duration"
            android:layout_width="124dp"
            android:layout_height="30dp"
            android:background="@drawable/shape_edit_bg"
            android:hint="@string/please_input"
            android:inputType="number"
            android:padding="6dp"
            android:textColor="@color/colorTitleName"
            android:textCursorDrawable="@null"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/text_s"
            android:textColor="@color/colorNoClick" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="15dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="84dp"
            android:layout_height="wrap_content"
            android:text="@string/height"
            android:textColor="@color/colorConfig"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/et_together_high"
            android:layout_width="124dp"
            android:layout_height="30dp"
            android:background="@drawable/shape_edit_bg"
            android:hint="@string/please_input"
            android:inputType="number"
            android:padding="6dp"
            android:textColor="@color/colorTitleName"
            android:textCursorDrawable="@null"
            android:textSize="12sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_verify_together"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@drawable/ic_btn_confirm" />
</LinearLayout>