<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    tools:context=".view.activity.CtConfigTogetherActivity">

    <include layout="@layout/layout_toolbar" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="58dp"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="84dp"
                    android:layout_height="wrap_content"
                    android:text="@string/text_duration"
                    android:textColor="@color/colorConfig"
                    android:textSize="16sp" />

                <cn.eejing.colorflower.util.ClearableEditText
                    android:id="@+id/et_together_duration"
                    android:layout_width="170dp"
                    android:layout_height="30dp"
                    android:background="@drawable/shape_edit_bg"
                    android:hint="@string/please_input"
                    android:inputType="numberDecimal"
                    android:padding="6dp"
                    android:textColor="@color/colorTitleName"
                    android:textCursorDrawable="@null"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/text_s"
                    android:textColor="@color/colorNoClick" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="18dp"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="84dp"
                    android:layout_height="wrap_content"
                    android:text="@string/height"
                    android:textColor="@color/colorConfig"
                    android:textSize="16sp" />

                <cn.eejing.colorflower.util.ClearableEditText
                    android:id="@+id/et_together_high"
                    android:layout_width="170dp"
                    android:layout_height="30dp"
                    android:background="@drawable/shape_edit_bg"
                    android:hint="@string/please_input"
                    android:inputType="number"
                    android:padding="6dp"
                    android:textColor="@color/colorTitleName"
                    android:textCursorDrawable="@null"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_jet_time_together"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="120dp">

                <TextView
                    android:layout_width="72dp"
                    android:layout_height="wrap_content"
                    android:text="@string/text_jet_time"
                    android:textColor="@color/colorTitle"
                    android:textSize="16sp"
                    android:textStyle="italic|bold" />

                <TextView
                    android:id="@+id/tv_together_jet_time"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:gravity="center"
                    android:padding="4dp"
                    android:textColor="@color/colorTitleName"
                    android:textSize="16sp"
                    android:textStyle="italic|bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_s"
                    android:textColor="@color/colorTitleName"
                    android:textStyle="italic|bold" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_verify_together"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/ic_btn_full"
                android:text="@string/btn_confirm"
                android:textColor="@color/colorWhite"
                android:textSize="19sp" />

            <Button
                android:id="@+id/btn_demo_together"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/ic_btn_hellow"
                android:text="@string/btn_demo_description"
                android:textColor="@color/colorNavBar"
                android:textSize="19sp" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>